; ModuleID = '/home/carl/AnghaBench/git/trace2/extr_tr2_dst.c_tr2_dst_want_warning.c'
source_filename = "/home/carl/AnghaBench/git/trace2/extr_tr2_dst.c_tr2_dst_want_warning.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tr2_dst_want_warning.tr2env_dst_debug = internal global i32 -1, align 4
@TR2_SYSENV_DST_DEBUG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @tr2_dst_want_warning to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tr2_dst_want_warning() #0 {
  %1 = alloca i8*, align 8
  %2 = load i32, i32* @tr2_dst_want_warning.tr2env_dst_debug, align 4
  %3 = icmp eq i32 %2, -1
  br i1 %3, label %4, label %20

4:                                                ; preds = %0
  %5 = load i32, i32* @TR2_SYSENV_DST_DEBUG, align 4
  %6 = call i8* @tr2_sysenv_get(i32 %5)
  store i8* %6, i8** %1, align 8
  %7 = load i8*, i8** %1, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %13

9:                                                ; preds = %4
  %10 = load i8*, i8** %1, align 8
  %11 = load i8, i8* %10, align 1
  %12 = icmp ne i8 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %9, %4
  store i32 0, i32* @tr2_dst_want_warning.tr2env_dst_debug, align 4
  br label %19

14:                                               ; preds = %9
  %15 = load i8*, i8** %1, align 8
  %16 = call i64 @atoi(i8* %15)
  %17 = icmp sgt i64 %16, 0
  %18 = zext i1 %17 to i32
  store i32 %18, i32* @tr2_dst_want_warning.tr2env_dst_debug, align 4
  br label %19

19:                                               ; preds = %14, %13
  br label %20

20:                                               ; preds = %19, %0
  %21 = load i32, i32* @tr2_dst_want_warning.tr2env_dst_debug, align 4
  ret i32 %21
}

declare dso_local i8* @tr2_sysenv_get(i32) #1

declare dso_local i64 @atoi(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
